cmake_minimum_required(VERSION 3.22)

add_subdirectory(StCube)
add_subdirectory(FreeRTOS)
add_subdirectory(DLog)
add_subdirectory(Executor)
add_subdirectory(MainEvent)
add_subdirectory(Lwip)
add_subdirectory(Supports)
add_subdirectory(MqttClient)
add_subdirectory(LwJson)
add_subdirectory(Configurator)
